feat: progress bar

--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ body {
     height: 5px;
     width: 0;
     z-index: -1;
-    transition: 0.5s ease-in-out;
+    transition: 0.2s ease-in;
 }
 
 
@@ -88,7 +88,7 @@ body {
     padding: 10px 40px;
     margin: 8px;
     font-size: 14px;
-    transition: background-color 0.5s ease-in-out;
+    transition: background-color 0.3s ease-in-out;
 }
 
 .btn:active {
@@ -101,4 +101,9 @@ body {
 
 .btn:hover {
     background-color: #31d37d;
+}
+
+.btn:disabled {
+    background-color: var(--line-border-empty);
+    cursor: not-allowed;
 }
