--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ body {
     height: 5px;
     width: 0;
     z-index: -1;
-    transition: 0.2s ease-in;
+    transition: 0.3s ease-in-out;
 }
 
 
@@ -72,6 +72,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: border 1.2s;
 }
 
 
